--- a/src/pages/private/SMM/index.css
+++ b/src/pages/private/SMM/index.css
@@ -202,3 +202,11 @@ a {
   text-decoration: none;
   font-weight: bold;
 }
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.xxx{
+  text-align: center
+}
